--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="preston.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="5e14ed1c-cf4e-4021-9fd4-e2f578463f2a.jpeg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,26 +25,26 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Preston Lim</p>
-					<p class="text-title-company">Associate Software Engineer</p>
-					<p class="text-title-company">Data Science Division, GovTech</p>
+					<p class="text-name">Sunil Tiwari</p>
+					<p class="text-title-company">Corporate Trainer</p>
+					<p class="text-title-company">Koenig Solutions Pvt.Ltd.</p>
 				</div>
 				<div class="col">
-					<img src="assets/govtech-logo-blue.svg" alt="Company Logo">
+					<img src="indise hacker .png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:preston@data.gov.sg">
+		<a href="suniltiwari0510@outlook.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">preston@data.gov.sg</p>
+						<p class="text-detail">suniltiwari0510@outlook.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+6591234567">
+		<a href="tel:+918439823958">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+65) 9123 4567</p>
+						<p class="text-detail">(+91) 8439823958</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.tech.gov.sg">
+		<a href="https://www.koenig-solutions.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">tech.gov.sg</p>
+						<p class="text-detail">www.koenig-solutions.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,15 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com.sg/maps/place/GovTech+Hive/@1.2998708,103.7871504,17z/
-		data=!3m1!4b1!4m5!3m4!1s0x31da1a457344a501:0x2202a995a6abc728!8m2!3d1.2998708!4d103.7893391">
+		<a href="https://www.google.com/maps/place/Koenig+Solutions+Pvt.+Ltd./@28.660198,77.147443,13z/data=!4m5!3m4!1s0x0:0x4917d059de0b7d88!8m2!3d28.6601977!4d77.1474425?hl=en">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">1 Fusionopolis, Sandcrawler, #09-01, 138577</p>
+						<p class="text-detail">KLJ Complex - II, B-39, Shivaji Marg, Moti Nagar, New Delhi, Delhi 110015</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
