--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Koenig Solutions Pvt.Ltd.</p>
 				</div>
 				<div class="col">
-					<img src="indise hacker .png" alt="Company Logo">
+					<img src="koenig.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
